src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_magnitude_does_not_allow_strings.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error: Invalid assignment: cannot assign 'STRING' to 'USINT'
  ┌─ <internal>:3:60
  │
3 │         FUNCTION func1  : INT VAR x : STRING; END_VAR test(x); END_FUNCTION
  │                                                            ^ Invalid assignment: cannot assign 'STRING' to 'USINT'

error: Invalid type nature for generic argument. STRING is no Magnitude.
  ┌─ <internal>:3:60
  │
3 │         FUNCTION func1  : INT VAR x : STRING; END_VAR test(x); END_FUNCTION
  │                                                            ^ Invalid type nature for generic argument. STRING is no Magnitude.

error: Invalid assignment: cannot assign 'WSTRING' to 'USINT'
  ┌─ <internal>:4:61
  │
4 │         FUNCTION func2  : INT VAR x : WSTRING; END_VAR test(x); END_FUNCTION
  │                                                             ^ Invalid assignment: cannot assign 'WSTRING' to 'USINT'

error: Invalid type nature for generic argument. WSTRING is no Magnitude.
  ┌─ <internal>:4:61
  │
4 │         FUNCTION func2  : INT VAR x : WSTRING; END_VAR test(x); END_FUNCTION
  │                                                             ^ Invalid type nature for generic argument. WSTRING is no Magnitude.


